# vscode-to-kitty

./: .gitignore  Cargo.toml  README.md
src/: iterm2.rs  lib.rs  main.rs  vscode.rs
tests/data/: vscode-theme.json
