[package]
name = "vscode-to-iterm2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.6"
claims = "0.7.1"
rgb = { version = "0.8.36", features = ["serde"] }
hex = "0.4.3"
plist = "1.4.3"
color-eyre = "0.6.2"
